--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
       body {
+        height: 100vh;
         display: grid;
         place-items: center;
+      }
+      label {
+        margin-left: 10px;
+      }
+      button {
+        display: block;
+        margin: 15px auto;
       }
     </style>
     <script src="script.js" type="text/javascript"></script>
@@ -16,7 +24,32 @@
   <body>
     <div id="container">
       <form novalidate>
-        <input type="text" value="Name" />
+        <label for="email">
+          <span>Email address:</span>
+          <input type="email" id="email" name="email" />
+          <span class="error"></span>
+        </label>
+        <label for="country">
+          <span>Country:</span>
+          <input type="text" id="country" name="country" />
+          <span class="error"></span>
+        </label>
+        <label for="zip">
+          <span>Zip code:</span>
+          <input type="number" id="zip" name="zip" />
+          <span class="error"></span>
+        </label>
+        <label for="password">
+          <span>Password:</span>
+          <input type="password" id="password" name="password" />
+          <span class="error"></span>
+        </label>
+        <label for="password-conf">
+          <span>Confirm password:</span>
+          <input type="password" id="password-conf" name="password-conf" />
+          <span class="error"></span>
+        </label>
+        <button type="submit">Submit</button>
       </form>
     </div>
   </body>
