--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <title>simple-form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      body {
-        height: 100vh;
-        display: grid;
-        place-items: center;
-      }
-      label {
-        margin-left: 10px;
-      }
+      label,
       button {
         display: block;
-        margin: 15px auto;
+        margin: 10px;
+      }
+      .label {
+        display: inline-block;
+        width: 140px;
       }
     </style>
     <script src="script.js" type="text/javascript"></script>
@@ -25,27 +22,27 @@
     <div id="container">
       <form novalidate>
         <label for="email">
-          <span>Email address:</span>
+          <span class="label">Email address:</span>
           <input type="email" id="email" name="email" />
           <span class="error"></span>
         </label>
         <label for="country">
-          <span>Country:</span>
+          <span class="label">Country:</span>
           <input type="text" id="country" name="country" />
           <span class="error"></span>
         </label>
         <label for="zip">
-          <span>Zip code:</span>
+          <span class="label">Zip code:</span>
           <input type="number" id="zip" name="zip" />
           <span class="error"></span>
         </label>
         <label for="password">
-          <span>Password:</span>
+          <span class="label">Password:</span>
           <input type="password" id="password" name="password" />
           <span class="error"></span>
         </label>
         <label for="password-conf">
-          <span>Confirm password:</span>
+          <span class="label">Confirm password:</span>
           <input type="password" id="password-conf" name="password-conf" />
           <span class="error"></span>
         </label>
