--- a/index.html
+++ b/index.html
@@ -15,39 +15,68 @@
         display: inline-block;
         width: 140px;
       }
+      .error {
+        color: red;
+      }
     </style>
-    <script src="script.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="container">
       <form novalidate>
         <label for="email">
           <span class="label">Email address:</span>
-          <input type="email" id="email" name="email" />
+          <input type="email" id="email" name="email" required />
           <span class="error"></span>
         </label>
         <label for="country">
           <span class="label">Country:</span>
-          <input type="text" id="country" name="country" />
+          <input
+            type="text"
+            id="country"
+            name="country"
+            pattern="^[a-zA-Z\s]*$"
+            required
+          />
           <span class="error"></span>
         </label>
         <label for="zip">
           <span class="label">Zip code:</span>
-          <input type="number" id="zip" name="zip" />
+          <input
+            type="text"
+            id="zip"
+            name="zip"
+            pattern="(^\d{5}$)|(^\d{5}-\d{4}$)"
+          />
           <span class="error"></span>
         </label>
         <label for="password">
           <span class="label">Password:</span>
-          <input type="password" id="password" name="password" />
+          <input
+            type="password"
+            id="password"
+            name="password"
+            minlength="8"
+            maxlength="20"
+            required
+          />
           <span class="error"></span>
         </label>
         <label for="password-conf">
           <span class="label">Confirm password:</span>
-          <input type="password" id="password-conf" name="password-conf" />
+          <input
+            type="password"
+            id="password-conf"
+            name="password-conf"
+            minlength="8"
+            maxlength="20"
+            required
+          />
           <span class="error"></span>
         </label>
         <button type="submit">Submit</button>
       </form>
+      <div class="message"></div>
     </div>
+    <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
